[package]
name = "esp-rs-water"
version = "0.1.0"
authors = ["Ben McHone <ben@mchone.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
anyhow       = "=1.0.75"
embedded-svc = "=0.27.1"
esp-idf-svc  = "=0.48.1"
toml-cfg     = "=0.1.3"
heapless     = "=0.8.0"

[build-dependencies]
embuild = "0.31.3"
